--- a/project/Introduction-Data-Science-Task-1.ipynb
+++ b/project/Introduction-Data-Science-Task-1.ipynb
@@ -2324,24 +2324,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    days  percent\n",
-      "dominant_user_type               \n",
-      "casual                 8     1.09\n",
-      "registered           724    98.91\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>days</th>\n",
+       "      <th>percent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dominant_user_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>casual</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>registered</th>\n",
+       "      <td>724</td>\n",
+       "      <td>98.91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    days  percent\n",
+       "dominant_user_type               \n",
+       "casual                 8     1.09\n",
+       "registered           724    98.91"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame({'days': data.groupby('dominant_user_type').size()})\n",
     "df['percent'] = df.apply(lambda x : round((x / len(data))*100, 2), axis=1)\n",
-    "print(df)"
+    "df"
    ]
   },
   {
