--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -74,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.read_csv('/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_test.csv', sep=';', index_col='instant')\n",
-    "train_data = pd.read_csv('/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv', sep=';', index_col='instant')"
+    "test_data = pd.read_csv('../data/BikeRentalDaily_test.csv', sep=';', index_col='instant')\n",
+    "train_data = pd.read_csv('../data/BikeRentalDaily_train.csv', sep=';', index_col='instant')"
    ]
   },
   {
